# Arena

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  check  check_integration  makefile  memcheck  pyproject.toml  setup.py
.githook/: pre-commit
.github/: config
.github/hook/: pre-commit
.github/workflows/: check.yml  check_pip_install.yml  markdown_embed_code.yml
arena/: CMakeLists.txt  __init__.py.in  _details.cpp  async.cpp  async.hpp  binder.hpp  box2d.hpp  caster.hpp  common.cpp  common.hpp  component_ref.hpp  physics.hpp  python.hpp  storage_base.py.in  utility.hpp  with_units.hpp
arena/binder/: _entity.hpp  component.hpp  ctor.hpp  def.hpp  doc.hpp  entity.hpp  fetcher.hpp  host.cpp  host.hpp  internal_component.hpp  normalize.hpp  property.hpp  static_def.hpp  traits.hpp
arena/sail_the_world/: __init__.py.in  _details.cpp
arena/traits/: common.hpp  crtp.hpp  invocable.hpp  template.hpp  type.hpp
include/: CMakeLists.txt  SFMLDebugDraw.h
include/arena/: arena.hpp  concept.hpp  draw.hpp  environment.hpp  physics.hpp  signal.hpp
include/arena/2021/: cup.hpp  def.hpp
include/arena/binding/: fetcher.hpp
include/arena/component/: body.hpp  common.hpp  host.hpp  init_guard.hpp  physics.hpp  ray.hpp  stackable.hpp  storage.hpp
include/arena/detail/: forward.hpp
include/arena/entity/: bot.hpp  field.hpp
include/arena/system/: raycasting.hpp
include/arena/traits/: common.hpp  crtp.hpp  invocable.hpp  template.hpp  type.hpp
include/component/: host.hpp
src/: CMakeLists.txt  SFMLDebugDraw.cpp  body.cpp  bot.cpp  cup.cpp  draw.cpp  environment.cpp  field.cpp  forward.hpp  host.cpp  module.cpp  physics.cpp  ray.cpp  raycasting.cpp  stackable.cpp  storage.cpp
test/: CMakeLists.txt  base.py  body.cpp  component.cpp  cup.cpp  demo.py  entity.cpp  field.cpp  host.cpp  main.cpp  module.cpp  python.supp  ray.cpp  render.cpp  sail_the_world.py  snippet.py  storage.cpp
the_cherry_on_the_cake/: CMakeLists.txt
the_cherry_on_the_cake/arena/: CMakeLists.txt  __init__.py.in  _coc_details.cpp  _details.cpp
the_cherry_on_the_cake/include/: CMakeLists.txt
the_cherry_on_the_cake/include/arena/the_cherry_on_the_cake/component/: cherry_like.hpp  flavor.hpp
the_cherry_on_the_cake/include/arena/the_cherry_on_the_cake/entity/: cake_layer.hpp  cherry.hpp
the_cherry_on_the_cake/src/: CMakeLists.txt  cake_layer.cpp  cherry.cpp
the_cherry_on_the_cake/test/: CMakeLists.txt  binding.py  demo.py
tool/: Arena.cmake  build_manylinux  build_manylinux36  build_manylinux37  build_manylinux38  build_wheel  check  check_online  iwyu  repair_wheel
tool/mapping/: Arena.imp  entt.imp  libcpp.imp  ltl.imp  pybind11.imp
